# OpenMMFBM

./: CMakeLists.txt  README.md
ConversionToNewAPI/: CMakeLists.txt
ConversionToNewAPI/include/OpenMMFBM/: BlockContextGenerator.h  CudaFBMKernelSources.h  CulaDiagonalize.h  FBM.h  FBMAbstract.h  FBMCuda.h  FBMParameters.h  FBMReference.h  MKLDiagonalize.h
ConversionToNewAPI/src/OpenMMFBM/: BlockContextGenerator.cpp  FBM.cpp  FBMCuda.cu  FBMParameters.cpp  FBMReference.cpp
ConversionToNewAPI/src/OpenMMFBM/kernels/: Kernels.cu
ConversionToNewAPI/test/: CMakeLists.txt
ConversionToNewAPI/test/src/OpenMMFBM/: RunTests.cu
FBMTests/: plots.sh
FBMTests/Test1/: README  protomol.conf
FBMTests/Test2/: README  protomol.conf
FBMTests/Test3/: README  protomol.conf  ww_structure_22_imp_4.0.7.sim.tpr
FBMTests/Test4/: README  protomol.conf
FBMTests/Test5/: README  protomol.conf
FBMTests/Test6/: #topol.top.1#  S_eigenvalues.txt  protomol.conf  topol.top  ww.gro  ww.ndx
FBMTests/TestPMNumerical/: README  protomol.conf
gputrunk/: CMakeLists.txt
gputrunk/include/OpenMMFBM/: FBMParameters.h  FlexibleBlockMethod.h  Math.h
gputrunk/src/OpenMMFBM/: FBMParameters.cpp  FlexibleBlockMethod.cpp  Kernels.h  Math.cpp  qr.cu
include/FBM/: BlockContextGenerator.h  CudaFBMKernelSources.h  FBM.h  FBMAbstract.h  FBMCuda.h  FBMParameters.h  FBMReference.h  Math.h
include/FBM/CUDA/: KernelSources.h.in
include/OpenMMFBM/: BlockContextGenerator.h  BlockDiagonalize.h  Diagonalize.h  FBM.h  FBMReference.h  MKLBlockDiagonalize.h  QRBlockDiagonalize.h
src/FBM/: BlockContextGenerator.cpp  CudaFBMKernelSources.cpp  FBM.cpp  FBMCuda.cpp  FBMCuda.cu  FBMParameters.cpp  FBMReference.cpp  Math.cpp
src/FBM/CUDA/: KernelSources.cpp.in
src/FBM/CUDA/kernels/: BlockCopyFromOpenMM_kernel.cu  BlockCopyToOpenMM_kernel.cu  BlockSort_kernel.cu  ComputeNormsAndCenter_kernel.cu  CopyFromOpenMM_kernel.cu  CopyFromOpenMM_test.cu  CopyToOpenMM_kernel.cu  CopyToOpenMM_test.cu  GeometricDOF_kernel.cu  MakeBlockHessian_kernel.cu  MakeEigenvalues_kernel.cu  MakeHE_kernel.cu  MakeProjection_kernel.cu  MakeProjection_test.cu  MatrixMultiply_kernel.cu  OddEvenSort_kernel.cu  OddEvenSort_test.cu  Orthagonalize23_kernel.cu  Orthagonalize_kernel.cu  PerturbPositions_kernel.cu  PerturnByE_kernel.cu  Symmetrize1D_kernel.cu  Symmetrize1D_test.cu  Symmetrize2D_kernel.cu  qr.cu
src/FBM/kernels/: Kernels.cu
src/OpenMMFBM/: BlockContextGenerator.cpp  FBM.cpp
src/OpenMMFBM/kernels/: qr.cu
test/: CMakeLists.txt  main.cpp
test/include/: CUDATest.h  QRTest.h  helper_cuda.h
test/src/: CUDATest.cpp  QRTest.cpp
trunk/: CMakeLists.txt
trunk/include/OpenMMFBM/: FlexibleBlockMethod.h
trunk/src/OpenMMFBM/: FlexibleBlockMethod.cpp  Math.cpp
